--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "target": "es2022",
     "types": ["node"]
   },
-  "include": ["app/**/*.ts", "api/**/*.ts"]
+  "include": ["app/**/*.ts", "api/**/*.ts", "lib/**/*.ts"]
 }
