--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
     "typescript": "^5.9.2",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vite-plugin-package-version": "^1.1.0"
   },
   "name": "bomb",
   "scripts": {
