--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "helmet": "^8.1.0",
     "http": "^0.0.1-security",
     "jose": "^6.0.13",
-    "redis": "^5.8.2",
     "ws": "^8.18.3"
   },
   "description": "Online multiplayer movie and actor game",
@@ -30,8 +29,8 @@
   "name": "bomb",
   "scripts": {
     "build": "tsc && vite build --emptyOutDir && node esbuild.mjs",
-    "dev": "concurrently -n client,server,redis \"vite --host\" \"nodemon --watch api --ext ts --exec 'node esbuild.mjs && node .build/api/server.js'\" \"redis-server\"",
-    "prod": "vite build --emptyOutDir && node esbuild.mjs && NODE_ENV=production PORT=3000 concurrently -n server,redis \"node .build/api/server.js\" \"redis-server\""
+    "dev": "concurrently -n client,server \"vite --host\" \"nodemon --watch api --ext ts --exec 'node esbuild.mjs && node .build/api/server.js'\"",
+    "prod": "vite build --emptyOutDir && node esbuild.mjs && NODE_ENV=production PORT=3000 node .build/api/server.js"
   },
   "version": "0.0.0"
 }
