Begin work on redis incorporation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "helmet": "^8.1.0",
     "http": "^0.0.1-security",
     "jose": "^6.0.13",
+    "redis": "^5.8.2",
     "ws": "^8.18.3"
   },
   "description": "Online multiplayer movie and actor game",
@@ -28,9 +29,9 @@
   },
   "name": "bomb",
   "scripts": {
-    "build": "tsc && vite build --emptyOutDir --mode production && NODE_ENV=production node esbuild.mjs",
-    "dev": "concurrently -n client,server \"vite --host\" \"nodemon --watch api --ext ts --exec 'node esbuild.mjs && node .build/api/server.js'\"",
-    "prod": "vite build --emptyOutDir --mode development && node esbuild.mjs && NODE_ENV=production PORT=3000 node .build/api/server.js"
+    "build": "tsc && vite build --emptyOutDir --mode production && NODE_ENV=production && node esbuild.mjs",
+    "dev": "concurrently -n client,server,redis \"vite --host\" \"nodemon --watch api --ext ts --exec 'node esbuild.mjs && node .build/api/server.js'\" \"redis-server\"",
+    "prod": "vite build --emptyOutDir --mode development && node esbuild.mjs && NODE_ENV=production PORT=3000 concurrently -n server,redis \"node .build/api/server.js\" \"redis-server\""
   },
   "version": "0.1.2"
 }
