Add and configure eslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always"
+  },
   "editor.formatOnSave": true,
-  "editor.linkedEditing": true
+  "editor.linkedEditing": true,
+  "editor.wordWrap": "on",
+  "eslint.lintTask.enable": false,
+  "eslint.run": "onSave",
+  "eslint.useFlatConfig": true
 }
