--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
     "@types/express": "^4.17.23",
     "@types/node": "^24.3.0",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
     "concurrently": "^9.2.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "globals": "^16.5.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.2.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vite-plugin-package-version": "^1.1.0"
@@ -31,6 +37,7 @@
   "scripts": {
     "build": "tsc && vite build --emptyOutDir --mode production && NODE_ENV=production node esbuild.mjs",
     "dev": "concurrently -n client,server \"vite --host\" \"nodemon --watch api --ext ts --exec 'node esbuild.mjs && node .build/api/server.js'\"",
+    "lint": "eslint . --fix",
     "prod": "vite build --emptyOutDir --mode development && node esbuild.mjs && NODE_ENV=production PORT=3000 node .build/api/server.js"
   },
   "version": "0.1.15"
